fixing page jumping bug
	modified:   ../nav-actions.js
	modified:   app/scripts/nav-actions.js
	modified:   app/stylus/base-styles.styl
	modified:   ../styles.css

--- a/melanomaRiskAssessment/src/app/stylus/base-styles.styl
+++ b/melanomaRiskAssessment/src/app/stylus/base-styles.styl
@@ -128,7 +128,7 @@ hr
     color inherit
 
 section
-    margin-right 6%
+    margin 0 6% 6% 0
     width 70%
     float right
     form
